use local copies of both twitter and meedan bootstrap

--- a/prototype/sass/styles.scss
+++ b/prototype/sass/styles.scss
@@ -1,8 +1,25 @@
-@import "bootstrap";
+// ====================
+// = Meedan bootstrap =
+// ====================
+// @import "meedan-bootstrap";
+
+// =====================
+// = Twitter bootstrap =
+// =====================
+// for reference, the original bootstrap-sass gem is in /reference
+// we're working with 
+@import "twitter-bootstrap";
 
 body {
-  background: red;
-  &:hover {
-    background: pink;
+  
+  header {
+  }
+  form {
+    .main {
+      .form-title {
+      }
+      .excerpt {
+      }
+    }
   }
 }
