--- a/prototype/stylesheets/styles.css
+++ b/prototype/stylesheets/styles.css
@@ -3451,9 +3451,30 @@ a.label:hover, a.badge:hover {
 .invisible {
   visibility: hidden; }
 
+@font-face {
+  font-family: "league gothic";
+  src: url("../webfonts/League_Gothic-webfont.eot");
+  src: url("../webfonts/League_Gothic-webfont.ttf") format("ttf");
+  src: url("../webfonts/League_Gothic-webfont.svg#League_Gothic-webfont") format("svg");
+  src: url("../webfonts/League_Gothic-webfont.woff") format("woff"); }
+
+body .modal {
+  margin-top: -350px; }
+body button.close {
+  padding: 4px 5px; }
 body header {
   background: #eee;
-  height: 100px; }
+  padding: 5%;
+  height: 30px; }
+  body header h1 {
+    font-family: "league gothic", sans;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 3.5em;
+    float: left; }
+  body header a {
+    float: left;
+    margin: -8px 10px 0 -10px; }
 body form {
   margin-bottom: 0; }
   body form .main {
@@ -3471,16 +3492,52 @@ body form {
         min-height: 35px; }
     body form .main .excerpt {
       float: left;
-      width: 55%;
-      margin-right: 5%; }
-    body form .main .img-excerpt {
+      margin-right: 5%;
+      width: 65%; }
+      body form .main .excerpt > textarea {
+        width: 100%; }
+    body form .main .carousel {
       float: left;
+      margin-top: 1.8em;
       width: 30%; }
+      body form .main .carousel ul {
+        margin: 0; }
+      body form .main .carousel .prev,
+      body form .main .carousel .next {
+        position: relative;
+        top: auto;
+        width: auto;
+        display: inline;
+        left: 0; }
     body form .main .tags {
       clear: both; }
       body form .main .tags input {
         width: 100%;
         height: 28px; }
+    body form .main .custom-data .checkbox {
+      float: left;
+      width: 30%;
+      margin-right: 5%; }
+    body form .main .custom-data .extra-data {
+      clear: both;
+      border-top: 1px solid #ddd;
+      margin-top: 3em; }
+      body form .main .custom-data .extra-data > label {
+        margin: -1em 0 1em;
+        background: #fff;
+        color: #888;
+        display: inline-block;
+        padding: 0 5px; }
+        body form .main .custom-data .extra-data > label span {
+          font-size: 0.7em; }
+        body form .main .custom-data .extra-data > label:hover {
+          cursor: pointer; }
   body form .submit {
     background: #eee;
-    height: 60px; }
+    height: 45px;
+    padding: 15px 15px 0 0; }
+    body form .submit .multilevel {
+      float: right; }
+      body form .submit .multilevel:hover > .btn:last-child {
+        border-left: 0;
+        padding-left: 11px; }
