--- a/prototype/stylesheets/styles.css
+++ b/prototype/stylesheets/styles.css
@@ -3465,16 +3465,17 @@ body button.close {
 body header {
   background: #eee;
   padding: 5%;
-  height: 30px; }
+  height: 35px; }
   body header h1 {
     font-family: "league gothic", sans;
     text-transform: uppercase;
     font-weight: normal;
-    font-size: 3.5em;
-    float: left; }
+    font-size: 3.7em;
+    float: left;
+    line-height: 0.9em; }
   body header a {
     float: left;
-    margin: -8px 10px 0 -10px; }
+    margin-right: 10px; }
 body form {
   margin-bottom: 0; }
   body form .main {
@@ -3534,10 +3535,31 @@ body form {
           cursor: pointer; }
   body form .submit {
     background: #eee;
-    height: 45px;
-    padding: 15px 15px 0 0; }
+    height: 26px;
+    padding: 5%; }
     body form .submit .multilevel {
       float: right; }
-      body form .submit .multilevel:hover > .btn:last-child {
+      body form .submit .multilevel > .btn:last-child:hover {
+        background-color: #0073cc;
+        background-image: -moz-linear-gradient(top, #0088cc, #0055cc);
+        background-image: -ms-linear-gradient(top, #0088cc, #0055cc);
+        background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0055cc));
+        background-image: -webkit-linear-gradient(top, #0088cc, #0055cc);
+        background-image: -o-linear-gradient(top, #0088cc, #0055cc);
+        background-image: linear-gradient(top, #0088cc, #0055cc);
+        background-repeat: repeat-x;
+        filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='ie-hex-str(#0088cc)', endColorstr='ie-hex-str(#0055cc)', GradientType=0);
+        border-color: #0055cc #0055cc #003580;
+        border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) fadein(rgba(0, 0, 0, 0.1), 15%);
+        *background-color: #0055cc;
+        filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
         border-left: 0;
-        padding-left: 11px; }
+        padding-left: 11px;
+        text-shadow: 0;
+        background-color: auto;
+        background-position: 0 0; }
+        body form .submit .multilevel > .btn:last-child:hover:hover, body form .submit .multilevel > .btn:last-child:hover:active, body form .submit .multilevel > .btn:last-child:hover.active, body form .submit .multilevel > .btn:last-child:hover.disabled, body form .submit .multilevel > .btn:last-child:hover[disabled] {
+          background-color: #0055cc;
+          *background-color: #004ab3; }
+        body form .submit .multilevel > .btn:last-child:hover:active, body form .submit .multilevel > .btn:last-child:hover.active {
+          background-color: #004099 \9; }
