--- a/prototype/sass/styles.scss
+++ b/prototype/sass/styles.scss
@@ -29,6 +29,7 @@ body {
   
   .modal{
     margin-top: -350px;
+    position: absolute;
   }
   
   button.close{
@@ -128,6 +129,16 @@ body {
               cursor: pointer;
             }
           }
+        }
+      }
+      #choose-discussion{
+        width: 100%
+      }
+      
+      .comment{
+        
+        textarea{
+          width: 100%;
         }
       }
     }
