--- a/prototype/sass/styles.scss
+++ b/prototype/sass/styles.scss
@@ -1,13 +1,3 @@
-// ====================
-// = Meedan bootstrap =
-// ====================
-// @import "meedan-bootstrap";
-
-// =====================
-// = Twitter bootstrap =
-// =====================
-// for reference, the original bootstrap-sass gem is in /reference
-// we're working with 
 @import "twitter-bootstrap";
 
 // Typography:
@@ -26,6 +16,7 @@
 }
 
 body {
+  background: url("../images/diddy.png") top center;
   
   .modal{
     margin-top: -350px;
