--- a/prototype/sass/styles.scss
+++ b/prototype/sass/styles.scss
@@ -17,10 +17,27 @@
 
 body {
   background: url("../images/diddy.png") top center;
+  overflow: hidden;
   
   .modal{
-    margin-top: -350px;
     position: absolute;
+    top: -100%;
+    //animation:
+    -webkit-transition-duration: 1s;
+    -moz-transition-duration: 1s;
+    -o-transition-duration: 1s;
+    transition-duration: 1s;
+  
+    &.onstage{
+      margin-top: -350px;
+      top: 50%;
+    }
+    
+    &.slideout{
+      top: 100%;
+      margin-top: 0;
+    }
+  
   }
   
   button.close{
